--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -86,9 +86,9 @@
                     <div class="col-md-3" id="logo_ops_div">
                         <div class="row">
                             <div class="col-md-12">
-                                <h4 class="display-4 text-center">ExFaKT!</h4>
+                                <h4 class="display-4 text-center"><strong>Tracy</strong></h4>
                                 <p  autocomplete="off" style="">
-                                    Explaining facts over Knowledge Graph and Text!</p>
+                                    Trace facts over Knowledge Graph and Text!</p>
                             </div>
                         </div>
 
