--- a/app/views/explans.scala.html
+++ b/app/views/explans.scala.html
@@ -113,7 +113,7 @@
                     <input type="radio" name="sort" id="generation" autocomplete="off" checked > Generation
                 </label>
                 <label class="btn btn-light">
-                    <input type="radio" name="sort" id="quality" autocomplete="off" > Quality
+                    <input type="radio" name="sort" id="quality" autocomplete="off" > Confidence
                 </label>
                 <label class="btn btn-light">
                     <input type="radio" name="sort" id="length" autocomplete="off" > Length
