auto complete predicates

--- a/app/views/explain_form.scala.html
+++ b/app/views/explain_form.scala.html
@@ -14,13 +14,13 @@
                             <div class="form-row text-left">
 
                                 <div class="form-group col-md-3">
-                                    <input name="subject" class="form-control m-1" placeholder="Albert_Einstein" value="@FactComponent.stripBrackets(query.getSubject())">
+                                    <input name="subject" class="form-control m-1" placeholder="Subject" value="@FactComponent.stripBrackets(query.getSubject())">
                                 </div>
                                 <div class="form-group col-md-3" id="scrollable-dropdown-menu">
-                                    <input name="predicate" class="form-control m-1 typeahead" placeholder="wasBornIn" value="@FactComponent.stripBrackets(query.getPredicate())">
+                                    <input name="predicate" class="form-control m-1 typeahead" placeholder="Predicate" value="@FactComponent.stripBrackets(query.getPredicate())">
                                 </div>
                                 <div class="form-group col-md-3 " >
-                                    <input name="object" class="form-control m-1" placeholder="Germany" value="@FactComponent.stripBrackets(query.getObject())">
+                                    <input name="object" class="form-control m-1" placeholder="Object" value="@FactComponent.stripBrackets(query.getObject())">
                                 </div>
 
                                 <div class="form-group col-md-3">
