--- a/app/views/explain_form.scala.html
+++ b/app/views/explain_form.scala.html
@@ -13,14 +13,14 @@
                             <div class="row col-md"> <label class="form-label mb-0"><h6>Query</h6></label></div>
                             <div class="form-row text-left">
 
-                                <div class="form-group col-md-3">
-                                    <input name="subject" class="form-control m-1" placeholder="Subject" value="@FactComponent.stripBrackets(query.getSubject())">
+                                <div class="form-group col-md-3"  id="entities-menu">
+                                    <input name="subject" class="form-control m-1 typeahead" placeholder="Subject" value="@FactComponent.stripBrackets(query.getSubject())">
                                 </div>
-                                <div class="form-group col-md-3" id="scrollable-dropdown-menu">
-                                    <input name="predicate" class="form-control m-1 typeahead" placeholder="Predicate" value="@FactComponent.stripBrackets(query.getPredicate())">
+                                <div class="form-group col-md-3" id="predicates-menu">
+                                    <input name="predicate" id="predicate" class="form-control m-1 typeahead" placeholder="Predicate" value="@FactComponent.stripBrackets(query.getPredicate())">
                                 </div>
-                                <div class="form-group col-md-3 " >
-                                    <input name="object" class="form-control m-1" placeholder="Object" value="@FactComponent.stripBrackets(query.getObject())">
+                                <div class="form-group col-md-3 " id="entities-menu">
+                                    <input name="object" class="form-control m-1 typeahead" placeholder="Object" value="@FactComponent.stripBrackets(query.getObject())">
                                 </div>
 
                                 <div class="form-group col-md-3">
@@ -85,88 +85,85 @@
 
 
 
-    <script>
-        var substringMatcher = function(strs) {
-            return function findMatches(q, cb) {
-                var matches, substringRegex;
 
-                // an array that will be populated with substring matches
-                matches = [];
 
-                // regex used to determine if a string contains the substring `q`
-                substrRegex = new RegExp(q, 'i');
+<script>
 
-                // iterate through the pool of strings and for any string that
-                // contains the substring `q`, add it to the `matches` array
-                $.each(strs, function(i, str) {
-                    if (substrRegex.test(str["value"])) {
-                        matches.push(str);
-                    }
-                });
 
-                cb(matches);
-            };
-        };
+        var filterFunction= function(strs) {
+            var q= $( document.activeElement).val();
 
-        // var states = ['Alabama', 'Alaska', 'Arizona', 'Arkansas', 'California',
-        //     'Colorado', 'Connecticut', 'Delaware', 'Florida', 'Georgia', 'Hawaii',
-        //     'Idaho', 'Illinois', 'Indiana', 'Iowa', 'Kansas', 'Kentucky', 'Louisiana',
-        //     'Maine', 'Maryland', 'Massachusetts', 'Michigan', 'Minnesota',
-        //     'Mississippi', 'Missouri', 'Montana', 'Nebraska', 'Nevada', 'New Hampshire',
-        //     'New Jersey', 'New Mexico', 'New York', 'North Carolina', 'North Dakota',
-        //     'Ohio', 'Oklahoma', 'Oregon', 'Pennsylvania', 'Rhode Island',
-        //     'South Carolina', 'South Dakota', 'Tennessee', 'Texas', 'Utah', 'Vermont',
-        //     'Virginia', 'Washington', 'West Virginia', 'Wisconsin', 'Wyoming'
-        // ];
+            var matches, substringRegex;
 
-        var states = [{"value":"actedIn"},
-            {"value":"byTransport"},
-            {"value":"created"},
-            {"value":"dealsWith"},
-            {"value":"diedIn"},
-            {"value":"directed"},
-            {"value":"edited"},
-            {"value":"graduatedFrom"},
-            {"value":"happenedIn"},
-            {"value":"hasAcademicAdvisor"},
-            {"value":"hasCapital"},
-            {"value":"hasChild"},
-            {"value":"hasCurrency"},
-            {"value":"hasDuration"},
-            {"value":"hasGender"},
-            {"value":"hasMusicalRole"},
-            {"value":"hasOfficialLanguage"},
-            {"value":"hasWonPrize"},
-            {"value":"influences"},
-            {"value":"isAffiliatedTo"},
-            {"value":"isCitizenOf"},
-            {"value":"isConnectedTo"},
-            {"value":"isInterestedIn"},
-            {"value":"isKnownFor"},
-            {"value":"isLeaderOf"},
-            {"value":"isLocatedIn"},
-            {"value":"isMarriedTo"},
-            {"value":"isPoliticianOf"},
-            {"value":"livesIn"},
-            {"value":"owns"},
-            {"value":"participatedIn"},
-            {"value":"playsFor"},
-            {"value":"wasBornIn"},
-            {"value":"worksAt"},
-            {"value":"wroteMusicFor"}];
+            // regex used to determine if a string contains the substring `q`
+            substrRegex = new RegExp(q, 'i');
+
+            // an array that will be populated with substring matches
+            matches = [];
+            // iterate through the pool of strings and for any string that
+            // contains the substring `q`, add it to the `matches` array
+            $.each(strs, function(i, str) {
+                if (substrRegex.test(str["value"])) {
+                    // console.log( str);
+                    matches.push(str);
+                }
+            });
+            return matches;
+        }
 
 
 
-        $('#scrollable-dropdown-menu .typeahead').typeahead({
+        // console.log(entities_url);
+
+        var entitiesSuggestions = new Bloodhound({
+            datumTokenizer: Bloodhound.tokenizers.obj.whitespace('value'),
+            queryTokenizer: Bloodhound.tokenizers.whitespace,
+            remote: {
+                wildcard: "QUERY",
+                url:jsRoutes.controllers.ExplainController.getEntities("QUERY").url,
+                filter: filterFunction
+            }
+        });
+
+        var predicatesSuggestions = new Bloodhound({
+            datumTokenizer: Bloodhound.tokenizers.obj.whitespace('value'),
+            queryTokenizer: Bloodhound.tokenizers.whitespace,
+            remote: {
+
+                url:jsRoutes.controllers.ExplainController.getPredicates().url,
+                filter: filterFunction
+            }
+        });
+
+
+        $('#predicates-menu .typeahead').typeahead({
                     hint: true,
                     highlight: true,
-                    minLength: 1
+                    minLength: 2
                 },
                 {
-                    name: 'states',
+                    name: 'predicates',
                     display: 'value',
-                    source: substringMatcher(states),
+                    source: predicatesSuggestions, //substringMatcher(),
                     templates: {
+                        empty: Handlebars.compile('<div class="list-group-item col-xs-10"><em>No matchs!</em></div>'),
+                        suggestion: Handlebars.compile('<div class="list-group-item col-xs-10"><strong>{{value}}</strong></div>')
+                    }
+
+                });
+
+
+        $('#entities-menu .typeahead').typeahead({
+                    hint: true,
+                    highlight: true,
+                    minLength: 2
+                },
+                {
+                    name: 'entity',
+                    display: 'value',
+                    source: predicatesSuggestions, //substringMatcher(),
+                    templates: {
+                        empty: Handlebars.compile('<div class="list-group-item col-xs-10"><em>No matchs!</em></div>'),
                         suggestion: Handlebars.compile('<div class="list-group-item col-xs-10"><strong>{{value}}</strong></div>')
                     }
 
