--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -10,6 +10,7 @@
 @(title: String, exampleQueries: ExampleQueries)(content: Html)
 
 
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -46,7 +47,7 @@
 
         @*<script data-main="@routes.Assets.versioned("javascripts/checkboxes.js")" type="text/javascript" src="@routes.Assets.versioned("javascripts/checkboxes.js")" ></script>*@
 
-
+        <script type="text/javascript" src="@routes.ExplainController.javascriptRoutes"></script>
 
 
     @*<script>*@
