Capture options in the demo

--- a/app/views/options.scala.html
+++ b/app/views/options.scala.html
@@ -157,7 +157,7 @@
                         <div class="col-sm-2 align-self-end text-right">
                             @*<input type="checkbox" checked data-toggle="toggle-sm" data-onstyle="success"   data-onstyle="danger" data-size="small">*@
                             <label class="switch">
-                                <input type="checkbox" name="yago">
+                                <input type="checkbox" name="web">
                                 <span class="slider round"></span>
                             </label>
                         </div>
