--- a/app/views/explain_form.scala.html
+++ b/app/views/explain_form.scala.html
@@ -6,7 +6,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <form class="text-center justify-content-center" method="post" action="@routes.ExplainController.explain()">
+                @*<form class="text-center justify-content-center" method="post" action="@routes.ExplainController.explain()">*@
+                <div class="text-center justify-content-center">
                     <div class="py-1 px-0">
                         @*<div class="container">*@
                         <div class="align-baseline">
@@ -37,51 +38,17 @@
                         </div>
 
 
-                        @*<div class="form-row">*@
-                        @*<div class="col-md-12">*@
-                        @*<div id="exTab2" class="container">*@
-                        @*<ul class="nav nav-tabs">*@
-                        @*<li class="nav-item">*@
-                        @*<a href="#1" data-toggle="tab" class="nav-link active">Rules</a>*@
-                        @*</li>*@
-                        @*<li class="nav-item"><a href="#2" data-toggle="tab" class="nav-link" >*@
-                        @*Dictionary</a>*@
-                        @*</li>*@
-                        @*</ul>*@
 
-                        @*<div class="tab-content">*@
-                        @*<div class="tab-pane active" id="1">*@
-                        @*<div class="form-group col-md-12 text-left">*@
-                        @*<label class="col-form-label-lg">Rules</label>*@
-                        @*<div class="row mt-4">*@
-                        @*<textarea name="rules" class="form-control" rows="3" placeholder="a(?x,?y):- b(?x,?z), c(?z,?y)." >@query.getRules().trim()</textarea>*@
-                        @*</div>*@
-                        @*</div>*@
-                        @*</div>*@
-                        @*<div class="tab-pane" id="2">*@
-                        @*<p> Dictionary for predicates</p>*@
-
-                        @*</div>*@
-
-
-                        @*</div>*@
-                        @*</div>*@
-                        @*</div>*@
-
-
-                        @*</div>*@
                     </div>
 
-                    @*</div>*@
-
-
-                </form>
-                <hr>
-
+                </div>
+            <hr>
+                @*</form>*@
             </div>
         </div>
     </div>
 </div>
+
 
 
 
