--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -50,40 +50,40 @@
         <script type="text/javascript" src="@routes.ExplainController.javascriptRoutes"></script>
 
 
-    @*<script>*@
-            @*$(function() {*@
-                @*$("#wiki-quality-range").slider({*@
+        @*<script>*@
+        @*$(function() {*@
+        @*$("#wiki-quality-range").slider({*@
 
 
-                    @*change: function (event, ui) {*@
-                        @*alert(ui.value);*@
-                        @*$("#wiki-quality-val").text(ui.value);*@
-                    @*}*@
+        @*change: function (event, ui) {*@
+        @*alert(ui.value);*@
+        @*$("#wiki-quality-val").text(ui.value);*@
+        @*}*@
 
-                @*});*@
-                @*// $("#wiki-quality-range").on("slide", function(slideEvt) {*@
-                @*//     $("#wiki-quality-val").text(slideEvt.value);*@
-                @*// });*@
+        @*});*@
+        @*// $("#wiki-quality-range").on("slide", function(slideEvt) {*@
+        @*//     $("#wiki-quality-val").text(slideEvt.value);*@
+        @*// });*@
 
-                @*// $("#web-quality-range").slider();*@
-                @*// $("#web-quality-range").on('change', function (slideEvt) {*@
-                @*//     alert(ui.value);*@
-                @*//     $("#web-quality-val").text(slideEvt.value);*@
-                @*// });*@
-            @*});*@
+        @*// $("#web-quality-range").slider();*@
+        @*// $("#web-quality-range").on('change', function (slideEvt) {*@
+        @*//     alert(ui.value);*@
+        @*//     $("#web-quality-val").text(slideEvt.value);*@
+        @*// });*@
+        @*});*@
 
 
-@*</script>*@
+        @*</script>*@
 
 
 
     </head>
     <body>
-
+        <form method="post" action="@routes.ExplainController.explain()">
         <div class="py-1">
             <div class="container-fluid">
                 <div class="row vdivide">
-                    <!--Options Dive -->
+                        <!--Options Dive -->
                     <div class="col-md-3" id="logo_ops_div">
                         <div class="row">
                             <div class="col-md-12">
@@ -97,28 +97,28 @@
                             <div class="input-group col-sm">
                                 <select class="custom-select custom-select-sm" id="example_select" aria-label="Select an example">
                                     <option  value="-1" selected>Choose an example ...</option>
-//                                    @for((example, index) <- exampleQueries.getList().zipWithIndex) {
-                                        <option s value="@{routes.ExplainController.example(index)}"> Example @example.getId(): @example.getName()</option>
-                                    }
+                                    //                                    @for((example, index) <- exampleQueries.getList().zipWithIndex) {
+                                    <option s value="@{routes.ExplainController.example(index)}"> Example @example.getId(): @example.getName()</option>
+                                }
 
                                     @*<option value="2">Example 2</option>*@
                                     @*<option value="3">Example 3</option>*@
                                 </select>
                                 @*<div class="input-group-append">*@
-                                    @*<button class="btn btn-outline-primary btn-sm" type="button" id="pickexample"><span class="fas fa-play fa-sm"></span></button>*@
+                                @*<button class="btn btn-outline-primary btn-sm" type="button" id="pickexample"><span class="fas fa-play fa-sm"></span></button>*@
                                 @*</div>*@
                             </div>
                         </div>
                         <div class="row">
-                        <div class="col-sm-12">
-                           @options(null)
-                        </div>
+                            <div class="col-sm-12">
+                            @options(null)
+                            </div>
                         </div>
                     </div>
 
-                    <!-- Content-->
+                        <!-- Content-->
                     <div class="col-md-9" id="content_div">
-                        @content
+                    @content
                     </div>
 
                 </div>
@@ -129,18 +129,18 @@
 
 
 
-            @*<div class="py-0">*@
-                @*<div class="container">*@
+        @*<div class="py-0">*@
+        @*<div class="container">*@
 
 
-                    @*<div class="row">*@
-                        @*<div class="col-md-12 text-center" style="">*@
+        @*<div class="row">*@
+        @*<div class="col-md-12 text-center" style="">*@
 
-                        @*</div>*@
-                    @*</div>*@
+        @*</div>*@
+        @*</div>*@
 
-                @*</div>*@
-            @*</div>*@
+        @*</div>*@
+        @*</div>*@
 
 
 
@@ -151,30 +151,32 @@
 
 
 
+
+            </form>
+
         @*<script data-main="@routes.Assets.versioned("lib/jquery/jquery.js")" type="text/javascript" src="@routes.Assets.versioned("lib/jquery/jquery.js")" ></script>*@
         @*<script script-src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>*@
         @*<script script-src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>*@
         @*<script script-src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>*@
-<script >
+        <script >
 
-        // $( "#pickexample" ).click(function() {
-        //     v=$("#example_select").options[$("#example_select").selectedIndex].value;
-        //     alert( "Handler for .click() called. "+ v );
-        //
-        // });
+                // $( "#pickexample" ).click(function() {
+                //     v=$("#example_select").options[$("#example_select").selectedIndex].value;
+                //     alert( "Handler for .click() called. "+ v );
+                //
+                // });
 
-        $('#example_select').on('change', function(e){
+                $('#example_select').on('change', function(e){
 
 
-            // alert(this.value);
+                    // alert(this.value);
                     // +" "+
                     // this.options[this.selectedIndex].value+" "+
                     // +" "+$(this).data("url"));
-            // url=$(this).data("url");
-             $( location ).attr("href", this.value);
-        });
-</script>
-
+                    // url=$(this).data("url");
+                    $( location ).attr("href", this.value);
+                });
+        </script>
 
 
     </body>
