--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -23,7 +23,7 @@
  * argument is a `String` with the title of the page, the second
  * argument is an `Html` object containing the body of the page.
  *@
-@main("Explain Query", exampleQueries) {
+@main("Explain Query", exampleQueries,query) {
 
 
  @explain_form(query)
