--- a/app/views/options.scala.html
+++ b/app/views/options.scala.html
@@ -1,5 +1,5 @@
-@import Models.QueryOptions
-@(options: QueryOptions)
+@import web.data.Query
+@(query: Query)
 
 @*<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.css" rel="stylesheet">*@
 @*<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.js"></script>*@
@@ -25,7 +25,11 @@
                         <div class="col-sm-2 align-self-end text-right">
                             @*<input type="checkbox" checked data-toggle="toggle-sm" data-onstyle="success"   data-onstyle="danger" data-size="small">*@
                             <label class="switch">
+                                @if(query.hasKg("yago")){
                                 <input type="checkbox" name="yago" checked>
+                                }else{
+                                    <input type="checkbox" name="yago" >
+                                }
                                 <span class="slider round"></span>
                             </label>
                         </div>
@@ -33,7 +37,7 @@
 
                     @*<input type="checkbox" aria-label="Checkbox for following text input">*@
                 </div>
-                <div class="list-group-item">
+                <div class="list-group-item" enabled="false">
                     <div class="row">
                         <div class="col-sm align-self-start">
                             <labal>Wikidata</labal>
@@ -41,7 +45,11 @@
                         <div class="col-sm-2 align-self-end text-right">
                             @*<input type="checkbox" checked data-toggle="toggle-sm" data-onstyle="success"   data-onstyle="danger" data-size="small">*@
                             <label class="switch">
-                                <input type="checkbox" name="wikidata">
+                                @if(query.hasKg("wikidata")){
+                                <input type="checkbox" name="wikidata" checked>
+                                }else {
+                                    <input type="checkbox" name="wikidata">
+                                }
                                 <span class="slider round"></span>
                             </label>
                         </div>
@@ -97,7 +105,7 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text small" id="basic-addon3">Trust</span>
                             </div>
-                                <input type="number" name="Wikipedia_weight" class="form-control input-number" value="0.5" min="0" max="1" step="0.05">
+                                <input type="number" name="Wikipedia_weight" class="form-control input-number" value="@query.getTextualSourceWeight("ELASTIC")" min="0" max="1" step="0.05">
                                 @*<div class="input-group-append">*@
                                     @*<span class="input-group-btn">*@
                                     @*<span class="input-group-text">%</span>*@
@@ -113,7 +121,11 @@
                         <div class="col-sm-2 align-self-end text-right">
                             @*<input type="checkbox" checked data-toggle="toggle-sm" data-onstyle="success"   data-onstyle="danger" data-size="small">*@
                             <label class="switch">
+                                @if(query.hasTextualSource("ELASTIC")){
                                 <input type="checkbox" name="wikipedia" checked>
+                                } else {
+                                    <input type="checkbox" name="wikipedia">
+                                }
                                 <span class="slider round"></span>
                             </label>
                         </div>
@@ -141,7 +153,7 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text small" id="basic-addon3">Trust</span>
                                 </div>
-                                <input type="number" name="web_weight" class="form-control input-number" value="0.5" min="0" max="1" step="0.05">
+                                <input type="number" name="web_weight" class="form-control input-number" value="@query.getTextualSourceWeight("BING")" min="0" max="1" step="0.05">
                                 @*<div class="input-group-append">*@
 
                                     @*<button type="button" class="btn btn-number" data-type="plus" data-field="web_weight">*@
@@ -157,7 +169,12 @@
                         <div class="col-sm-2 align-self-end text-right">
                             @*<input type="checkbox" checked data-toggle="toggle-sm" data-onstyle="success"   data-onstyle="danger" data-size="small">*@
                             <label class="switch">
-                                <input type="checkbox" name="web">
+                                @if(query.hasTextualSource("BING")){
+                                <input type="checkbox" name="web" checked>
+                                } else {
+                                    <input type="checkbox" name="web" >
+                                }
+
                                 <span class="slider round"></span>
                             </label>
                         </div>
@@ -213,7 +230,7 @@
                                             <span class="fas fa-minus fa-sm"></span>
                                         </button>
                                 </div>
-                                    <input type="text" name="rules_num" class="form-control input-number" value="3" min="1" max="10" step="1">
+                                    <input type="text" name="rules_num" class="form-control input-number" value="@query.getNumOfRules()" min="1" max="10" step="1">
                                 <div class="input-group-append">
                                     @*<span class="input-group-btn">*@
                                         <button type="button" class="btn btn-number" data-type="plus" data-field="rules_num">
@@ -245,7 +262,7 @@
                                         <span class="fas fa-minus fa-sm"></span>
                                     </button>
                                 </div>
-                                <input type="text" name="explan_num" class="form-control input-number" value="5" min="1" max="10" step="1">
+                                <input type="text" name="explan_num" class="form-control input-number" value="@query.getNumOfExplan()" min="1" max="10" step="1">
                                 <div class="input-group-append">
                                     @*<span class="input-group-btn">*@
                                     <button type="button" class="btn btn-number" data-type="plus" data-field="explan_num">
