--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -179,7 +179,31 @@
                 });
         </script>
 
+<footer class="footer fixed-bottom">
+    <table align="center">
+        <tbody><tr>
+            <td valign="middle" style="padding-top: 15px">
+                <div class="container mb-3">
+                    © 2019
+                    <a href="https://www.mpi-inf.mpg.de/departments/databases-and-information-systems/" referrerpolicy="no-referrer">Database and Information Systems Group</a>, Max Planck Institute for Informatics | <a href="https://www.mpi-inf.mpg.de/departments/databases-and-information-systems/research/impact/exfakt/">ExFakt Project</a> | <a href="mailto:gadelrab@mpi-inf.mpg">
+  Contact</a> |  <a href="https://imprint.mpi-klsb.mpg.de/inf/tracy.mpi-inf.mpg.de" referrerpolicy="no-referrer"> Impressum</a> | <a href="https://data-protection.mpi-klsb.mpg.de/inf/travy.mpi-inf.mpg.de" referrerpolicy="no-referrer">
+                    Datenschutzhinweis</a>  </div>
+            </td>
+            <td style="width: 50px"></td>
+            <td>
+                <img style="height: 60px" src="https://www.mpi-inf.mpg.de/fileadmin/inf/user/medien/logo_mpi_430.png" class="img-fluid" alt="logo">
+            </td>
+        </tr>
+    </tbody></table>
+</footer>
 
+<!-- <footer>
+  <p>  / <a href="https://imprint.mpi-klsb.mpg.de/inf/tracy">Imprint</a> / <a href="https://data-protection.mpi-klsb.mpg.de/inf/tracy">Data Protection</a> /
+   <a href="mailto:gadelrab@mpi-inf.mpg">
+  Contact</a>
+</footer> -->
     </body>
+
+
 
 </html>
